[tool.poetry]
name = "pycount_mi"
version = "0.1.0"
description = "Counts the number of instances of words in a text document."
authors = ["Mukund Iyer"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
